--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -186,10 +186,15 @@ body {
             -webkit-flex-shrink: 0;
             flex-shrink: 0;
             width: 78px;
-            font-size: 11px;
+            font-size: 10px;
             overflow: hidden;
             text-overflow: ellipsis;
             white-space: nowrap;
+        }
+        .ui-label.label-infield {
+            font-size: 10px;
+            line-height: 24px;
+            vertical-align: top;
         }
         &.field-asset {
             > .content > .ui-image-field {
@@ -224,9 +229,9 @@ body {
                     position: absolute;
                     top: 0;
                     right: 0;
-                    width: 24px;
-                    height: 24px;
-                    line-height: 22px;
+                    width: 22px;
+                    height: 22px;
+                    line-height: 20px;
                     margin: 0;
                     padding: 0;
                     border: none;
@@ -250,9 +255,9 @@ body {
                     display: block;
                     top: 0;
                     right: 0;
-                    width: 24px;
-                    height: 24px;
-                    line-height: 22px;
+                    width: 22px;
+                    height: 22px;
+                    line-height: 20px;
                     margin: 0;
                     padding: 0;
                     border: none;
@@ -311,9 +316,9 @@ body {
                     position: absolute;
                     top: 0;
                     right: 0;
-                    width: 24px;
-                    height: 24px;
-                    line-height: 22px;
+                    width: 22px;
+                    height: 22px;
+                    line-height: 20px;
                     background-color: #364346;
                     cursor: pointer;
                     font-family: 'ui-font-solid';
@@ -478,10 +483,10 @@ body {
 .ui-tree.hierarchy {
     .ui-tree-item {
         > .title > .icon:after {
-            content: '\E211';
+            content: '\E243';
             line-height: 21px;
             font-family: 'ui-font-solid';
-            font-size: 22px;
+            font-size: 18px;
             text-align: center;
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
@@ -499,10 +504,11 @@ body {
             }
         }
         &.c-script > .title > .icon:after {
-            content: '\E167';
+            content: '\E284';
         }
         &.c-model > .title > .icon:after {
             content: '\E417';
+            font-size: 16px;
         }
         &.c-animation > .title > .icon:after {
             content: '\E274';
@@ -603,14 +609,14 @@ body {
         }
         > .icon {
             position: absolute;
-            width: 24px;
-            height: 24px;
+            width: 22px;
+            height: 22px;
             top: 4px;
             left: 4px;
             font-family: 'ui-font-solid';
             font-size: 22px;
             font-weight: 100;
-            line-height: 22px;
+            line-height: 20px;
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
             font-smoothing: antialiased;
@@ -630,7 +636,7 @@ body {
             line-height: 14px;
             margin: 0px;
             padding: 2px;
-            font-size: 10px;
+            font-size: 12px;
             text-overflow: ellipsis;
             text-align: center;
             overflow: hidden;
@@ -644,6 +650,40 @@ body {
     top: 0;
     left: 0;
     z-index: 1;
+}
+
+.ui-panel.top-controls {
+    position: absolute;
+    $width: (32px + 4px) * 2;
+    left: calc(50% - #{$width / 2});
+    top: 0;
+    width: $width;
+    z-index: 1;
+    background-color: transparent;
+
+    > .content {
+        > .ui-button.icon {
+            width: 32px;
+            height: 32px;
+            margin: 2px;
+            padding: 0;
+            border: none;
+
+            font-family: 'ui-font-solid';
+            font-size: 32px;
+            font-weight: 100;
+            line-height: 28px;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+            font-smoothing: antialiased;
+            text-align: center;
+
+            &.active {
+                color: #40d47e;
+                background-color: #2c393c;
+            }
+        }
+    }
 }
 
 .picker-color {
@@ -877,7 +917,7 @@ body {
 
     .ui-checkbox.picker-curve-toggle {
         text-align: center;
-        line-height: 24px;
+        line-height: 22px;
         width: auto;
         min-width: 14px;
         padding-left: 5px;
