--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -8,9 +8,10 @@ body {
     overflow: hidden;
     margin: 0;
     background-color: #333;
-    font-size: 13px;
+    font-size: 14px;
     color: #eee;
-    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+    font-family: inconsolatamedium;
+    // font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 }
 
 .noSelect {
@@ -101,10 +102,36 @@ body {
     }
 }
 
+#user-a,
+#user-b {
+    position: absolute;
+    z-index: 1;
+    width: 48px;
+    height: 48px;
+    border: 2px solid #fff;
+    top: 4px;
+    background-size: 48px 48px;
+    background-position: center center;
+    background-repeat: no-repeat;
+}
+
+#user-a {
+    right: 60px;
+    background-image: url("https://playcanvas.com/api/7/thumbnail?size=65");
+    border-color: #7f7;
+}
+
+#user-b {
+    right: 4px;
+    background-image: url("https://playcanvas.com/api/458/thumbnail?size=65");
+    border-color: #f70;
+}
+
 #ui-bottom {
     height: 24px;
     line-height: 24px;
     background-color: #293538;
+    border-top: 1px solid #20292b;
     // background-color: #111;
 
     > .content {
@@ -166,10 +193,69 @@ body {
     }
 }
 
+.ui-panel.assets {
+    > .ui-header {
+        > .filters {
+            float: right;
+            background-color: transparent;
+
+            > .content {
+                > .ui-label.label {
+                    margin: 0;
+                    height: 32px;
+                    line-height: 32px;
+                    font-size: 12px;
+                    margin-right: 8px;
+                    vertical-align: top;
+                    text-transform: uppercase;
+                }
+                > .ui-select-field.options {
+                    margin: 0;
+                    height: 32px;
+                    line-height: 32px;
+                    border: none;
+                    font-size: 12px;
+                    vertical-align: top;
+
+                    > .value {
+                        line-height: 32px;
+
+                        &:after {
+                            width: 32px;
+                            height: 32px;
+                            line-height: 30px;
+                        }
+                    }
+                    > ul > li {
+                        line-height: 32px;
+                    }
+                }
+                > .ui-text-field.search {
+                    margin: 0;
+                    width: 192px;
+                    height: 32px;
+                    border: none;
+                    // border-left: 1px solid #20292b;
+                    background-color: #293538;
+
+                    > input.field {
+                        line-height: 32px;
+                    }
+                    &:after {
+                        line-height: 32px;
+                        background-color: #293538;
+                    }
+                }
+            }
+        }
+    }
+}
+
 .ui-panel.attributes {
+    border-left: 1px solid #20292b;
+
     > .content {
         background-color: #293538;
-        border-left: 1px solid #20292b;
     }
     .ui-panel {
         &.field {
@@ -186,7 +272,7 @@ body {
             -webkit-flex-shrink: 0;
             flex-shrink: 0;
             width: 78px;
-            font-size: 10px;
+            font-size: 12px;
             overflow: hidden;
             text-overflow: ellipsis;
             white-space: nowrap;
@@ -236,7 +322,7 @@ body {
                     padding: 0;
                     border: none;
                     font-family: 'ui-font-solid';
-                    font-size: 22px;
+                    font-size: 18px;
                     text-align: center;
                     -webkit-font-smoothing: antialiased;
                     -moz-osx-font-smoothing: grayscale;
@@ -262,7 +348,7 @@ body {
                     padding: 0;
                     border: none;
                     font-family: 'ui-font-solid';
-                    font-size: 22px;
+                    font-size: 18px;
                     text-align: center;
                     -webkit-font-smoothing: antialiased;
                     -moz-osx-font-smoothing: grayscale;
@@ -322,7 +408,7 @@ body {
                     background-color: #364346;
                     cursor: pointer;
                     font-family: 'ui-font-solid';
-                    font-size: 22px;
+                    font-size: 18px;
                     text-align: center;
                     -webkit-font-smoothing: antialiased;
                     -moz-osx-font-smoothing: grayscale;
@@ -392,7 +478,7 @@ body {
                 padding: 0;
                 border: none;
                 font-family: 'ui-font-solid';
-                font-size: 22px;
+                font-size: 18px;
                 text-align: center;
                 -webkit-font-smoothing: antialiased;
                 -moz-osx-font-smoothing: grayscale;
@@ -436,7 +522,7 @@ body {
                     background-color: transparent;
                     border: none;
                     font-family: 'ui-font-solid';
-                    font-size: 22px;
+                    font-size: 18px;
                     text-align: center;
                     -webkit-font-smoothing: antialiased;
                     -moz-osx-font-smoothing: grayscale;
@@ -449,7 +535,7 @@ body {
                 }
 
                 > .refresh {
-                    font-size: 26px;
+                    font-size: 20px;
                     line-height: 28px;
                     &:after {
                         content: '\E145';
@@ -478,6 +564,10 @@ body {
             }
         }
     }
+}
+
+.ui-panel.hierarchy {
+    border-right: 1px solid #20292b;
 }
 
 .ui-tree.hierarchy {
@@ -614,7 +704,7 @@ body {
             top: 4px;
             left: 4px;
             font-family: 'ui-font-solid';
-            font-size: 22px;
+            font-size: 18px;
             font-weight: 100;
             line-height: 20px;
             -webkit-font-smoothing: antialiased;
@@ -670,7 +760,7 @@ body {
             border: none;
 
             font-family: 'ui-font-solid';
-            font-size: 32px;
+            font-size: 24px;
             font-weight: 100;
             line-height: 28px;
             -webkit-font-smoothing: antialiased;
