--- a/editor/sass/ui.scss
+++ b/editor/sass/ui.scss
@@ -361,6 +361,7 @@ a:visited {
         background-color: #07f;
         box-shadow: 0 0 16px #000;
         transition: width 100ms, height 100ms, margin-left 100ms, margin-top 100ms;
+        box-shadow: 0 0 16px rgba(0, 0, 0, .5);
     }
 }
 
