--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -122,17 +122,46 @@ body {
     height: 24px;
     line-height: 24px;
     background-color: #293538;
-    border-top: 1px solid #20292b;
     // background-color: #111;
 
     > .content {
         padding: 0 8px;
         overflow: hidden;
-        font-size: 12px;
-        color: #aaa;
 
-        &.error {
-            color: #fb222f;
+        > .status {
+            float: left;
+            margin: 0;
+            line-height: 24px;
+            font-size: 12px;
+            color: #aaa;
+
+            &.error {
+                color: #fb222f;
+            }
+        }
+        > .jobsProgress {
+            position: absolute;
+            top: 10px;
+            right: 24px;
+            opacity: 0;
+            visibility: hidden;
+            transition: opacity 100ms, visibility 100ms;
+
+            &.active {
+                opacity: 1;
+                visibility: visible;
+            }
+        }
+        > .jobsCount {
+            position: absolute;
+            top: 0;
+            right: 0;
+            margin: 0;
+            width: 24px;
+            line-height: 24px;
+            font-size: 12px;
+            color: $text-darkest;
+            text-align: center;
         }
     }
 }
@@ -733,7 +762,7 @@ body {
     bottom: 0;
     right: 0;
     width: auto;
-    border-top: 1px solid #293538;
+    border-top: 1px solid $bcg-dark;
 
     > .content {
         background-color: transparent;
