--- a/editor/sass/ui.scss
+++ b/editor/sass/ui.scss
@@ -354,7 +354,10 @@ a:visited {
         bottom: 0;
         left: 0;
         background-color: rgba(0, 0, 0, .7);
-        cursor: pointer;
+
+        &.clickable {
+            cursor: pointer;
+        }
     }
     > .content {
         position: relative;
