--- a/editor/sass/launch.scss
+++ b/editor/sass/launch.scss
@@ -1,3 +1,15 @@
+@font-face {
+    font-family: 'inconsolatamedium';
+    src: url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/Inconsolata-webfont.eot');
+    src: url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/Inconsolata-webfont.eot?#iefix') format('embedded-opentype'),
+         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/Inconsolata-webfont.woff2') format('woff2'),
+         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/Inconsolata-webfont.woff') format('woff'),
+         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/Inconsolata-webfont.ttf') format('truetype'),
+         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/Inconsolata-webfont.svg#inconsolatamedium') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 html {
     height: 100%;
     background-color: #1d292c;
@@ -56,6 +68,48 @@ canvas:focus {
             width: 0%;
             height: 100%;
             background-color: white;
+        }
+    }
+}
+
+#application-console {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    max-height: 40%;
+    background-color: rgba(0, 0, 0, 0.7);
+    font-size: 14px;
+    font-family: inconsolatamedium, Monaco, Menlo, 'Ubuntu Mono', Consolas, source-code-pro, monospace;
+    font-weight: normal;
+    color: white;
+    padding-left: 10px;
+    overflow-y: scroll;
+    word-wrap: break-word;
+    border-top: 1px solid #444;
+
+    &.hidden {
+        display: none;
+    }
+
+    img {
+        float: right;
+        padding: 5px;
+        cursor: pointer;
+    }
+
+    p {
+        &.error {
+            color: red;
+        }
+
+        &.trace {
+            color: #ddd;
+        }
+
+        a {
+            color: rgb(255, 143, 0);
         }
     }
 }
