--- a/editor/sass/ui.scss
+++ b/editor/sass/ui.scss
@@ -1107,9 +1107,16 @@ a:visited {
         border-color: #07f;
     }
     &.empty {
+        width: 22px;
+
         > .preview,
-        > .view,
         > .clear {
+            display: none;
+        }
+        > .pick {
+            background-color: #000;
+        }
+        &:after {
             display: none;
         }
     }
@@ -1118,7 +1125,7 @@ a:visited {
         width: 64px;
         height: 64px;
     }
-    > .view,
+    > .pick,
     > .clear {
         position: absolute;
         width: 16px;
@@ -1132,7 +1139,7 @@ a:visited {
         right: 0;
         border-left: 1px solid #666;
     }
-    > .view {
+    > .pick {
         left: 0;
         border-right: 1px solid #666;
     }
