--- a/editor/sass/theme-dark.scss
+++ b/editor/sass/theme-dark.scss
@@ -211,6 +211,18 @@ a:visited {
     &.flash {
         @extend .ui-flash;
     }
+
+    .material-preview {
+        background-color: $bcg-darkest;
+
+        .content {
+            background-color: $bcg-darkest;
+
+            img {
+                background-color: $bcg-darkest;
+            }
+        }
+    }
 }
 
 .ui-overlay {
