Prevent dragging / selection for texture / material previews

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -314,6 +314,10 @@ body {
     }
 }
 
+.ui-panel.material-preview, .ui-panel.texture-preview {
+    pointer-events: none;
+}
+
 .drop-ref-highlight {
     z-index: 210;
 }
