Fixed backgrounds in material pickers

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -379,11 +379,8 @@ body {
 }
 
 .ui-panel.attributes {
-    border-left: 1px solid $bcg-dark;
+    border-left: 1px solid black;
 
-    > .content {
-        background-color: #293538;
-    }
     .ui-panel {
         &.field {
             > .content {
@@ -427,7 +424,7 @@ body {
                 > .ui-image-field {
                     float: right;
                     background-position: center center;
-                    background-color: $bcg-darkest;
+                    background-color: black;
                 }
             }
         }
