--- a/editor/sass/theme-dark.scss
+++ b/editor/sass/theme-dark.scss
@@ -213,6 +213,30 @@ a:visited {
     }
 }
 
+.ui-panel.attributes {
+    border-left: 1px solid $bcg-dark;
+
+    > .content {
+        background-color: #293538;
+    }
+    .ui-list {
+        &.model-nodes {
+            > .ui-list-item {
+                > .ui-image-field {
+                    background-color: $bcg-darkest;
+                }
+            }
+        }
+    }
+
+    .field-asset {
+        > .content > .ui-image-field.material-asset {
+            background-image: none;
+            background-color: $bcg-darkest;
+        }
+    }
+}
+
 .ui-overlay {
     > .overlay {
         background-color: rgba($bcg-darkest, .7);
