--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -456,6 +456,7 @@ body {
                             }
                             &:last-child {
                                 margin-right: 4px;
+                                line-height: 26px;
 
                                 &:hover {
                                     color: #d34141;
